--- a/index.html
+++ b/index.html
@@ -72,9 +72,10 @@
             <div class="col-lg-12 text-center">
                 <h1>FAS Scraper For Department Page Building</h1>
 				<br>
-                <p class="lead">Can It Be Done?</p>
-				<p class="lead">Should It Be Done?</p>
-
+                <h2>Can It Be Done?</h2>
+				<p class="lead">Yes</p>
+				<h2>Should It Be Done?</h2>
+				<p class="lead">Yes</p>
 
             </div>
         </div>
