--- a/index.html
+++ b/index.html
@@ -69,17 +69,57 @@
     <div class="container">
 
         <div class="row">
-            <div class="col-lg-12 text-center">
+            <div class="col-xs-12 text-center">
                 <h1>FAS Scraper For Department Page Building</h1>
-		<br>
-                <h2>Can It Be Done?</h2>
-		<p class="lead">Yes</p>
-		<h2>Should It Be Done?</h2>
-		<p class="lead">Yes</p>
+				<br>
+				<h2>Can It Be Done?</h2>
+				<p class="lead">Yes</p>
+				<h2>Should It Be Done?</h2>
+				<p class="lead">Yes</p>
             </div>
+		<br><br>
         </div>
         <!-- /.row -->
-
+		
+		<div class="row">
+			<div class="col-lg-12 text-center">
+				<br>
+				<h2>Team:</h2>
+				<br>
+			</div>
+		 </div>
+		<!-- /.row -->
+		
+		<div class="row">
+			<div class="col-sm-4 text-center">
+				<img src="./pics/ProfilePic-Charlotte.jpg" class="img-rounded">
+				<p class="lead">Charlotte Teague</p>
+			</div>
+			<div class="col-sm-4 text-center">
+				<img src="./pics/ProfilePic-Ben.jpg" class="img-rounded">
+				<p class="lead">Benjamin Earley</p>
+			</div>		
+			<div class="col-sm-4 text-center">
+				<img src="http://placehold.it/192x192" class="img-rounded">
+				<p class="lead">Ryan Camper</p>
+			</div>
+		</div>
+		<!-- /.row -->	
+		<div class="row">
+			<div class="col-sm-4 text-center">
+				<img src="http://placehold.it/192x192" class="img-rounded">
+				<p class="lead">Seth Nugent</p>
+			</div>		
+			<div class="col-sm-4  text-center">
+				<img src="http://placehold.it/192x192" class="img-rounded">
+				<p class="lead">Nick Shena</p>
+			</div>
+			<div class="col-sm-4 text-center">
+				<img src="http://placehold.it/192x192" class="img-rounded">
+				<p class="lead">Matthew Vanacore</p>
+			</div>		
+		</div>
+		<!-- /.row -->
     </div>
     <!-- /.container -->
 
