--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <style>
@@ -38,28 +39,24 @@
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <!--<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
+                </button>-->
                 <a class="navbar-brand" href="#" style="color: #b31217;">CS410 RED</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <!-- <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#">About</a>
+                        <a href="https://github.com/FASScraper"><i class="fa fa-github"></i></a>
                     </li>
                     <li>
-                        <a href="#">Services</a>
-                    </li>
-                    <li>
-                        <a href="#">Contact</a>
+                        <a href="https://fasscraper.slack.com/"><i class="fa fa-slack"></i></a>
                     </li>
                 </ul>
-            </div> -->
+            </div> 
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container -->
@@ -73,9 +70,9 @@
                 <h1>FAS Scraper For Department Page Building</h1>
 				<br>
 				<h2>Can It Be Done?</h2>
-				<p class="lead">Yes</p>
+				<p class="lead">Maybe</p>
 				<h2>Should It Be Done?</h2>
-				<p class="lead">Yes</p>
+				<p class="lead">Maybe</p>
             </div>
 		<br><br>
         </div>
